--- a/css/style_form.css
+++ b/css/style_form.css
@@ -1,5 +1,4 @@
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
 
 #addtask {
     margin: 0;
@@ -17,13 +16,13 @@
     font-size: 12px;
     line-height: 30px;
     color: black;
-    background: beige;
+    background: #81F7F3;
 }
 
 #addtask.container {
     max-width: 400px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0 0;
     position: relative;
 }
 
@@ -36,16 +35,18 @@
 #form {
     background: #F9F9F9;
     padding: 25px;
-    margin: 150px 0;
+    margin: 50px 0;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 #form h3 {
     display: block;
     font-size: 30px;
-    font-weight: 300;
     margin-bottom: 10px;
     position: center;
+    font-weight: bold;
+    left: 150px;
+
 }
 
 #addtask input {
@@ -90,7 +91,7 @@
 }
 
 #form input[type="submit"]:hover {
-    background: #43A047;
+    background: #81F7F3;
     -webkit-transition: background 0.3s ease-in-out;
     -moz-transition: background 0.3s ease-in-out;
     transition: background-color 0.3s ease-in-out;
@@ -123,5 +124,4 @@
 }
 
 :-ms-input-placeholder {
-    color: #888;
-}
+    color: #888;}
